public class Driver {
    public static void main(String args[]) {
        Vocabulary vocabulary = new Vocabulary();
        vocabulary.start();
    }
}
