@startuml

title __SRC's Class Diagram__\n

  package  {
    class Driver {
        {static} + main()
    }
  }
  

  package  {
    class OrderedSG {
        {static} - internalVocabulary : ArrayList<String>
        + OrderedSG()
        + update()
        + generateSentenceHelper()
    }
  }
  

  package  {
    class RandomSG {
        {static} - internalVocabulary : ArrayList<String>
        + RandomSG()
        + update()
        + generateSentenceHelper()
    }
  }
  

  package  {
    interface SentenceGenerator {
        {abstract} + update()
        {abstract} + generateSentenceHelper()
        + generateSentence()
    }
  }
  

  package  {
    class SortedSG {
        {static} - internalVocabulary : ArrayList<String>
        + SortedSG()
        + update()
        + generateSentenceHelper()
    }
  }
  

  package  {
    class Vocabulary {
        - word : String
        - generators : ArrayList<SentenceGenerator>
        + Vocabulary()
        + addGenerator()
        + removeGenerator()
        + notifyGenerators()
        + measurementsChanged()
        + setMeasurements()
        + start()
    }
  }
  

  OrderedSG -up-|> SentenceGenerator
  OrderedSG o-- Vocabulary : subjectVocabulary
  RandomSG -up-|> SentenceGenerator
  RandomSG o-- Vocabulary : subjectVocabulary
  SortedSG -up-|> SentenceGenerator
  SortedSG o-- Vocabulary : subjectVocabulary


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
